[package]
name = "enviroplus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.14.1", features = ["hal"] }
bme280 = { version = "0.2", features = ["serde"] }
ltr-559 = { version = "0.1.1" }
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
dotenv = "0.15.0"
futures = "0.3.25"
tokio = { version = "1.4.0", features = ["rt"] }
