[package]
name = "enviroplus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.14.1", features = ["hal"] }
bme280 = { version = "0.2", features = ["serde"] }
ltr-559 = { version = "0.1.1" }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
